jasn/examples/invalid/invalid_base64.jasn
// Invalid base64 characters
{
  bad_b64: b64"Hello!"
}
